# ServerCom

./: .gitignore  README.md  task.h
ClientSimulate/: CMakeLists.txt  build.sh  readme.txt
ClientSimulate/lib_prj/: CMakeLists.txt
ClientSimulate/main_prj/: CMakeLists.txt  ClientConnect.cpp  ClientConnect.h  Timer.cpp  Timer.h  main.cc
ClientSimulate/vs/: premake5.lua
ClientSimulate/vs/vs2013/: ClientSimulate.sln  lib_prj.vcxproj  lib_prj.vcxproj.filters  main_prj.vcxproj  main_prj.vcxproj.filters
RedeemCode/: readme.txt  分析.txt
RedeemCode/src/: CMakeLists.txt  main.cc  serialcode_parser.cc  serialcode_parser.h  test.cc
RedeemCode/src/utility/: logFile.cpp
RedeemCode/vs/: premake5.lua
gflags/src/: CMakeLists.txt  main.cc  test_gflags.cc  test_ini.cc
gflags/src/utility/: logFile.cpp  logFile.h  typedef.h
gflags_SimpleIni/debug/: testsi-UTF8.ini
gflags_SimpleIni/src/: main.cc
gflags_SimpleIni/vs/: premake5.lua  readme.txt
redisClient/: readme.txt
redisClient/debug/: valgrind.sh
redisClient/dep/hiredis/: Makefile  ae.c  ae.h  ae_epoll.c  zmalloc.c  zmalloc.h
redisClient/dep/hiredis/examples/: example-ae.c
redisClient/redis/conf/: redis.nextid.conf  redis.plydata.conf
redisClient/src/: CMakeLists.txt  HiredisEventMgr.cpp  HiredisEventMgr.h  RedisConn.cpp  RedisConn.h  config.h  main.cc  test.cpp
redisClient/src/utility/: logFile.cpp  logFile.h
redisClient/vs/: premake5.lua
